medicines-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicines-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medicines-api
  template:
    metadata:
      labels:
        app: medicines-api
    spec:
      serviceAccountName: medicines-api
      containers:
        - name: medicines-api
          image: medicines-api
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 30
